fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,24 @@
-/* body {
-    background-image: url(./assets/brick.jpg);
-    color: white;
-} */
+
 
 
 .App {
-    background: #000
+    height: 800px;
+    width: 75%;
+    margin: auto;
 }
 .App.dark {
-    /* background-image: url(./assets/brick.jpg); */
-	background: #000;
+    background-image: url(./assets/brick.jpg);
+    background-size: cover;
+	/* background: #000; */
 
 	color: #fff;
 	transition: 0.3s all;
 }
 
 .App.light {
-    /* background-image: url(./assets/brick.jpg); */
+    background-image: url(./assets/redbrick.jpg);
 
-	background: #fff;
+	/* background: #fff; */
 	color: #000;
 	transition: 0.3s all;
 }
